--- a/README
+++ b/README
@@ -1,1 +1,78 @@
+SKKY
+
+PROGRAM
+1) INSERT PERSONAL INFORMATION
+2) TAKE PERSONALITY QUIZ
+3) GET MATCHED UP WITH ONE OF THE FOUR PROFILES IN THE SYSTEM
+4) CHOOSE WHICH FRIENDS YOU WOULD LIKE TO ADD
+5) ...
+
+TO DO:
+KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES
+1. CHILL
+2. INTROVERT
+3. EXTROVERT
+4. 
+
+YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
+1. FAV COLOR
+A BLUE
+B BLACK
+C YELLOW
+D PINK
+
+2. FAV MUSIC
+A ELECTRONIC
+B CLASSICAL
+C ROCK & ROLL
+D BLUES
+
+3.
+A
+B
+C
+D
+
+4.
+A
+B
+C
+D
+
+5.
+A
+B
+C
+D
+
+6.
+A
+B
+C
+D
+
+7.
+A
+B
+C
+D
+
+8.
+A
+B
+C
+D
+
+9.
+A
+B
+C
+D
+
+10.
+A
+B
+C
+D
+
 
