--- a/README
+++ b/README
@@ -8,11 +8,13 @@ PROGRAM
 5) ...
 
 TO DO:
-KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES
+KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
 1. CHILL
 2. INTROVERT
 3. EXTROVERT
 4. 
+
+ERIC: CREATE LINKED LIST FOR QUIZ
 
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
 1. FAV COLOR
