--- a/README
+++ b/README
@@ -10,6 +10,14 @@ PROGRAM
 5) ...
 
 TO DO:
+
+KAMILAH: MATH
+A. SCORE BETWEEN 10 AND 40
+1. 10 - 17
+2. 18 - 25
+3. 25 - 32
+4. 33 - 40
+
 KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
 1. CHILL
 2. INTROVERT
