--- a/README
+++ b/README
@@ -24,7 +24,7 @@ KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
 3. EXTROVERT
 4. 
 
-ERIC: CREATE LINKED LIST FOR QUIZ
+ERIC: CREATE HASH TABLE FOR QUIZ
 
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
 1. FAV COLOR
