--- a/README
+++ b/README
@@ -39,29 +39,29 @@ B CLASSICAL
 C ROCK & ROLL
 D Hip Hop
 
-3.
-A
-B
-C
-D
+3. FAV MOVIE
+A COMEDY
+B ACTION
+C HORROR
+D ROMANTIC
 
-4.
-A
-B
-C
-D
+4. IDEAL WEEKEND
+A PARTYING
+B RELAXING
+C STUDYING
+D HIKING
 
-5.
-A
-B
-C
-D
+5. FAV PET
+A DOG
+B CAT 
+C REPTILE
+D HORSE
 
-6.
-A
-B
-C
-D
+6. FAV SCHOOL SUBJECT
+A HISTORY
+B ART 
+C P.E.
+D MATH
 
 7.
 A
