--- a/README
+++ b/README
@@ -37,7 +37,7 @@ D PINK
 A ELECTRONIC
 B CLASSICAL
 C ROCK & ROLL
-D HIP HOP
+D Hip Hop
 
 3. FAV MOVIE
 A COMEDY
@@ -48,7 +48,7 @@ D ROMANTIC
 4. IDEAL WEEKEND
 A PARTYING
 B RELAXING
-C STUDYING
+C PLAYING VIDEO GAMES
 D HIKING
 
 5. FAV PET
@@ -63,11 +63,11 @@ B ART
 C P.E.
 D MATH
 
-7.
-A
-B
-C
-D
+7. WHERE WOULD YOU RATHER LIVE
+A A CITY
+B THE COUNTRY
+C THE BEACH
+D THE FOREST
 
 8.
 A
