--- a/README
+++ b/README
@@ -19,10 +19,10 @@ A. SCORE BETWEEN 10 AND 40
 4. 33 - 40
 
 KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
-1. CHILL
-2. INTROVERT
-3. EXTROVERT
-4. 
+1. OUTGOING
+2. SHY
+3. ADVENTUROUS
+4. CHARMING
 
 ERIC: CREATE HASH TABLE FOR QUIZ
 
