--- a/README
+++ b/README
@@ -55,7 +55,7 @@ D HIKING
 A DOG
 B CAT 
 C REPTILE
-D HORSE
+D HAMSTER
 
 6. FAV SCHOOL SUBJECT
 A HISTORY
@@ -64,27 +64,27 @@ C P.E.
 D MATH
 
 7. WHERE WOULD YOU RATHER LIVE
-A A CITY
-B THE COUNTRY
-C THE BEACH
-D THE FOREST
+A CITY
+B SUBURBS
+C BEACH
+D COUNTRY
 
-8.
-A
-B
-C
-D
+8. FAV DRINK
+A TEA
+B COFFEE
+C WINE
+D ENERGY DRINKS
 
-9.
-A
-B
-C
-D
+9. WHICH CITY WOULD YOU RATHER VISIT
+A PARIS
+B TOKYO
+C DUBAI
+D RIO
 
-10.
-A
-B
-C
-D
+10. FAV ANIMAL?
+A TIGER
+B ELEPHANT
+C SLOTH
+D SNAKE
 
 
