--- a/README
+++ b/README
@@ -29,27 +29,27 @@ ERIC: CREATE HASH TABLE FOR QUIZ
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
 1. FAV COLOR
 A BLUE
-B BLACK
-C YELLOW
+B YELLOW
+C BLACK
 D PINK
 
 2. FAV MUSIC
-A ELECTRONIC
-B POP
-C ROCK & ROLL
-D Hip Hop
+A HIP-HOP/RAP
+B ROCK
+C ELECTRONIC
+D POP
 
 3. FAV MOVIE
 A COMEDY
-B ACTION
+B ROMANTIC
 C HORROR
-D ROMANTIC
+D ADVENTURE
 
 4. IDEAL WEEKEND
 A PARTYING
 B RELAXING
-C PLAYING VIDEO GAMES
-D HIKING
+C HIKING
+D HANGING WITH FRIENDS
 
 5. FAV PET
 A DOG
@@ -58,33 +58,33 @@ C REPTILE
 D HAMSTER
 
 6. FAV SCHOOL SUBJECT
-A HISTORY
+A MATH
 B ART 
 C P.E.
-D MATH
+D HISTORY
 
 7. WHERE WOULD YOU RATHER LIVE
 A CITY
 B SUBURBS
-C BEACH
-D COUNTRY
+C COUNTRY
+D BEACH
 
 8. FAV DRINK
-A TEA
-B COFFEE
-C WINE
-D ENERGY DRINKS
+A COFFEE
+B TEA
+C ENERGY DRINKS
+D WINE
 
 9. WHICH CITY WOULD YOU RATHER VISIT
-A PARIS
-B TOKYO
-C DUBAI
-D RIO
+A RIO
+B ICELAND
+C TOKYO
+D PARIS
 
-10. FAV ANIMAL?
-A TIGER
-B ELEPHANT
-C SLOTH
-D SNAKE
+10. FAV ANIMAL
+A LION
+B SLOTH
+C SNAKE
+D ELEPHANT
 
 
