--- a/README
+++ b/README
@@ -13,78 +13,78 @@ TO DO:
 
 KAMILAH: MATH
 A. SCORE BETWEEN 10 AND 40
-1. 10 - 17
-2. 18 - 25
-3. 25 - 32
-4. 33 - 40
+1. 10 - 17 - SHY
+2. 18 - 25 - CHARMING
+3. 25 - 32 - ADVENTUROUS
+4. 33 - 40 - OUTGOING
 
 KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
-1. OUTGOING
-2. SHY
+1. SHY
+2. CHARMING
 3. ADVENTUROUS
-4. CHARMING
+4. OUTGOING
 
 ERIC: CREATE HASH TABLE FOR QUIZ
 
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
 1. FAV COLOR
-A BLUE
-B YELLOW
+A YELLOW
+B PINK
 C BLACK
-D PINK
+D BLUE
 
 2. FAV MUSIC
-A HIP-HOP/RAP
-B ROCK
+A ROCK
+B POP
 C ELECTRONIC
-D POP
+D HIP-HOP/RAP
 
 3. FAV MOVIE
-A COMEDY
-B ROMANTIC
+A ROMANTIC
+B ADVENTURE
 C HORROR
-D ADVENTURE
+D COMEDY
 
 4. IDEAL WEEKEND
-A PARTYING
-B RELAXING
+A RELAXING
+B HANGING WITH FRIENDS
 C HIKING
-D HANGING WITH FRIENDS
+D PARTYING
 
 5. FAV PET
-A DOG
-B CAT 
+A CAT
+B BUNNY
 C REPTILE
-D HAMSTER
+D DOG
 
 6. FAV SCHOOL SUBJECT
-A MATH
-B ART 
+A ART
+B MATH 
 C P.E.
-D HISTORY
+D ENGLISH
 
 7. WHERE WOULD YOU RATHER LIVE
-A CITY
-B SUBURBS
+A SUBURBS
+B BEACH
 C COUNTRY
-D BEACH
+D CITY
 
 8. FAV DRINK
-A COFFEE
-B TEA
+A TEA
+B WATER
 C ENERGY DRINKS
-D WINE
+D COFFEE
 
 9. WHICH CITY WOULD YOU RATHER VISIT
-A RIO
-B ICELAND
+A LONDON
+B PARIS
 C TOKYO
-D PARIS
+D RIO
 
 10. FAV ANIMAL
-A LION
+A ELEPHANT
 B SLOTH
 C SNAKE
-D ELEPHANT
+D LION
 
 
