--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-SKKY
+SKKYE
 
 *ROUGH DRAFT*
 
@@ -13,8 +13,8 @@ TO DO:
 
 KAMILAH: MATH
 A. SCORE BETWEEN 10 AND 40
-1. 10 - 17 - SHY
-2. 18 - 25 - CHARMING
+1. 10 - 16 - SHY
+2. 17 - 25 - CHARMING
 3. 25 - 32 - ADVENTUROUS
 4. 33 - 40 - OUTGOING
 
