--- a/README
+++ b/README
@@ -29,6 +29,14 @@ ERIC: CREATE HASH TABLE FOR QUIZ
 I changed the order of the personalities and updated the anwsers/math so it matches better & made a PersonalityQuiz.cc - Yleia
 
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
+
+PERSONALITY QUIZ 
+(ADD UP TOTAL AT END FOR FINAL SCORE)
+A-1 point
+B-2 pts
+C-3pts
+D-4pts
+
 1. FAV COLOR
 A YELLOW
 B PINK
