--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 SKKYE
 
-*ROUGH DRAFT*
-
 PROGRAM
 1) INSERT PERSONAL INFORMATION
 2) TAKE PERSONALITY QUIZ
@@ -28,71 +26,9 @@ ERIC: CREATE HASH TABLE FOR QUIZ
 
 YLEIA & KAMILAH: CREATE 10 QUESTION QUIZ WITH 4 ANSWERS EACH THAT CORRESPOND WITH THE DIFFERENT PERSONALITIES ABOVE
 
-PERSONALITY QUIZ 
+PERSONALITY QUIZ:
 (ADD UP TOTAL AT END FOR FINAL SCORE)
-A-1 point
-B-2 pts
-C-3pts
-D-4pts
-
-1. FAV COLOR
-A YELLOW
-B PINK
-C BLACK
-D BLUE
-
-2. FAV MUSIC
-A ROCK
-B POP
-C ELECTRONIC
-D HIP-HOP/RAP
-
-3. FAV MOVIE
-A ROMANTIC
-B ADVENTURE
-C HORROR
-D COMEDY
-
-4. IDEAL WEEKEND
-A RELAXING
-B HANGING WITH FRIENDS
-C HIKING
-D PARTYING
-
-5. FAV PET
-A CAT
-B BUNNY
-C REPTILE
-D DOG
-
-6. FAV SCHOOL SUBJECT
-A ART
-B MATH 
-C P.E.
-D ENGLISH
-
-7. WHERE WOULD YOU RATHER LIVE
-A SUBURBS
-B BEACH
-C COUNTRY
-D CITY
-
-8. FAV DRINK
-A TEA
-B WATER
-C ENERGY DRINKS
-D COFFEE
-
-9. WHICH CITY WOULD YOU RATHER VISIT
-A PARIS
-B AMSTERDAM
-C TOKYO
-D RIO
-
-10. FAV ANIMAL
-A ELEPHANT
-B SLOTH
-C SNAKE
-D LION
-
-
+A - 1 pt
+B - 2 pts
+C - 3 pts
+D - 4 pts
