--- a/README
+++ b/README
@@ -17,7 +17,7 @@ A. SCORE BETWEEN 10 AND 40
 4. 33 - 40 - OUTGOING
 
 KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
-1. SHY
+1. CHILL
 2. CHARMING
 3. ADVENTUROUS
 4. OUTGOING
