--- a/README
+++ b/README
@@ -5,16 +5,17 @@ PROGRAM
 2) TAKE PERSONALITY QUIZ
 3) GET MATCHED UP WITH ONE OF THE FOUR PROFILES IN THE SYSTEM
 4) CHOOSE WHICH FRIENDS YOU WOULD LIKE TO ADD
-5) ...
+5) NETWORKING
 
 TO DO:
 
 KAMILAH: MATH
-A. SCORE BETWEEN 10 AND 40
-1. 10 - 16 - SHY
-2. 17 - 25 - CHARMING
-3. 25 - 32 - ADVENTUROUS
-4. 33 - 40 - OUTGOING
+A. SCORE BETWEEN 12 AND 48
+1. 12 - 18 - CHILL
+2. 19 - 25 - CHARMING
+3. 26 - 33- IMAGINATIVE
+4. 34 - 40 - ADVENTUROUS
+5. 41 - 48 - OUTGOING
 
 KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
 1. CHILL
