--- a/README
+++ b/README
@@ -10,24 +10,28 @@ PROGRAM
 TO DO:
 
 KAMILAH: MATH
-A. SCORE BETWEEN 12 AND 48
-1. 12 - 18 - CHILL
-2. 19 - 25 - CHARMING
-3. 26 - 33- IMAGINATIVE
-4. 34 - 40 - ADVENTUROUS
-5. 41 - 48 - OUTGOING
-
-KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
-1. CHILL
-2. CHARMING
-3. ADVENTUROUS
-4. OUTGOING
-
-ERIC: CREATE HASH TABLE FOR QUIZ
-
-PERSONALITY QUIZ:
-(ADD UP TOTAL AT END FOR FINAL SCORE)
+A) AMOUNT OF POINTS PER ANSWER 
 A - 1 pt
 B - 2 pts
 C - 3 pts
 D - 4 pts
+E - 5 pts
+
+B) SCORE BETWEEN 12 AND 60
+1. 12 - 20 - CHILL
+2. 21 - 30 - CHARMING
+3. 31 - 40 - IMAGINATIVE
+4. 41 - 50 - ADVENTUROUS
+5. 51 - 60 - OUTGOING
+
+KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
+1. CHILL
+2. CHARMING
+3. IMAGINATIVE
+4. ADVENTUROUS
+5. OUTGOING
+
+ERIC: CREATE LINK LIST FOR PERSONAL INFORMATION & MAKEFILE
+
+PERSONALITY QUIZ:
+(ADD UP TOTAL AT END FOR FINAL SCORE)
