--- a/README
+++ b/README
@@ -33,5 +33,4 @@ KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
 
 ERIC: CREATE LINK LIST FOR PERSONAL INFORMATION & MAKEFILE
 
-PERSONALITY QUIZ:
-(ADD UP TOTAL AT END FOR FINAL SCORE)
+YLEIA: PERSONALITY QUIZ
