--- a/README
+++ b/README
@@ -5,43 +5,10 @@ that matches you with one of five personality types (chill, charming, imaginitiv
 After SKKYE determines your personality type it will match you with one of our profiles in the system and from there you can
 add and chat with new friends.<3
 
-TO DO:
-NETWORKING - CHAT
-
-PROGRAM
-1) INSERT PERSONAL INFORMATION
+PROGRAM OUTLINE:
+1) INSERT PERSONAL INFORMATION 
 2) TAKE PERSONALITY QUIZ
 3) GET MATCHED UP WITH ONE OF THE FOUR PROFILES IN THE SYSTEM
 4) CHOOSE WHICH FRIENDS YOU WOULD LIKE TO ADD
 5) NETWORKING
-KAMILAH: PROJECT MANAGER 
-
-MATH
-A) AMOUNT OF POINTS PER ANSWER 
-A - 1 pt
-B - 2 pts
-C - 3 pts
-D - 4 pts
-E - 5 pts
-
-B) SCORE BETWEEN 12 AND 60
-1. 12 - 20 - CHILL
-2. 21 - 30 - CHARMING
-3. 31 - 40 - IMAGINATIVE
-4. 41 - 50 - ADVENTUROUS
-5. 51 - 60 - OUTGOING
-
-KAMILAH: PROJECT MANAGER
-
-YLEIA: PERSONALITY QUIZ
-
-KORY & SALEH: CREATE 4 DIFFERENT PERSONALITIES & PROFILES USING BST
-1. CHILL
-2. CHARMING
-3. IMAGINATIVE
-4. ADVENTUROUS
-5. OUTGOING
-
-ERIC: CREATE LINK LIST FOR PERSONAL INFORMATION & MAKEFILE
-
 
