--- a/README
+++ b/README
@@ -3,8 +3,7 @@
   The first step to setting up a SKKYE account is to enter your personal information. From there, you will take a personality quiz
 that matches you with one of five personality types (chill, charming, imaginitive, adventurous, or outgoing).
 
-  After SKKYE determines your personality type it will match you with one of our profiles in the system and from there you can
-add and chat with new friends.<3
+  After SKKYE determines your personality type it will match you with one of our profiles in the system and from there you can add and chat with new friends.<3
 
 PROGRAM OUTLINE:
 1) INSERT PERSONAL INFORMATION 
